force-app/main/default/objects/User_Detail__c/User_Detail__c.object-meta.xml
<CustomObject>
    <label>User Detail</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Detail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>