force-app/main/default/objects/User_Detail__c/fields/Amount_Level__c.field-meta.xml
<CustomField>
    <fullName>Amount_Level__c</fullName>
    <label>Amount Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>