force-app/main/default/objects/User_Detail__c/fields/Break_15_1__c.field-meta.xml
<CustomField>
    <fullName>Break_15_1__c</fullName>
    <formula>&quot;10.00 - 10.15&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break 15 - 1</label>
    <type>Text</type>
</CustomField>