force-app/main/default/objects/User_Detail__c/fields/Break_15_2__c.field-meta.xml
<CustomField>
    <fullName>Break_15_2__c</fullName>
    <formula>&quot;15.10 - 15.25&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break 15 - 2</label>
    <type>Text</type>
</CustomField>