force-app/main/default/objects/User_Detail__c/fields/Break_60__c.field-meta.xml
<CustomField>
    <fullName>Break_60__c</fullName>
    <formula>&quot;11.00 - 12.00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break 60</label>
    <type>Text</type>
</CustomField>