force-app/main/default/objects/User_Detail__c/fields/DMTM__c.field-meta.xml
<CustomField>
    <fullName>DMTM__c</fullName>
    <description>Mapping User dmtm</description>
    <label>DMTM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ajeng.a</fullName>
            </value>
            <value>
                <fullName>anggi.t</fullName>
            </value>
            <value>
                <fullName>Dede.r</fullName>
            </value>
            <value>
                <fullName>Deki.deki</fullName>
            </value>
            <value>
                <fullName>Deni Salmah</fullName>
            </value>
            <value>
                <fullName>dhany.p</fullName>
            </value>
            <value>
                <fullName>diah.p</fullName>
            </value>
            <value>
                <fullName>e.purwaningsih</fullName>
            </value>
            <value>
                <fullName>EPERTIWI</fullName>
            </value>
            <value>
                <fullName>evi.n</fullName>
            </value>
            <value>
                <fullName>haryadi</fullName>
            </value>
            <value>
                <fullName>Ina.lestari</fullName>
            </value>
            <value>
                <fullName>indah.d</fullName>
            </value>
            <value>
                <fullName>Kiki.a</fullName>
            </value>
            <value>
                <fullName>laili.n</fullName>
            </value>
            <value>
                <fullName>maya sulfa</fullName>
            </value>
            <value>
                <fullName>muhamad.c</fullName>
            </value>
            <value>
                <fullName>nurjanah nurjanah</fullName>
            </value>
            <value>
                <fullName>Ramadhian.P</fullName>
            </value>
            <value>
                <fullName>Rizki Amelia</fullName>
            </value>
            <value>
                <fullName>sari evi</fullName>
            </value>
            <value>
                <fullName>Shofialita</fullName>
            </value>
            <value>
                <fullName>syifa.o</fullName>
            </value>
            <value>
                <fullName>Taufik.jamaludin</fullName>
            </value>
            <value>
                <fullName>Win.hb</fullName>
            </value>
            <value>
                <fullName>yudi.a</fullName>
            </value>
            <value>
                <fullName>yusup.w</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>