force-app/main/default/objects/User_Detail__c/fields/F_Entity__c.field-meta.xml
<CustomField>
    <fullName>F_Entity__c</fullName>
    <description>untuk field dependency</description>
    <label>F Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFI</fullName>
            </value>
            <value>
                <fullName>AGI</fullName>
            </value>
            <value>
                <fullName>ALI</fullName>
            </value>
            <value>
                <fullName>AMFS</fullName>
            </value>
            <value>
                <fullName>MAGI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>