force-app/main/default/objects/User_Detail__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>Level 1: &gt;= Amount Level
Level 2: &lt; Amount Level</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>