force-app/main/default/objects/User_Detail__c/fields/Max_Capacity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_Amount__c</fullName>
    <label>Max Capacity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>