force-app/main/default/objects/User_Detail__c/fields/Outbound_Activity_Case_type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Activity_Case_type__c</fullName>
    <label>Outbound Activity &amp; Case type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>F_Entity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Confirmation - Welcome Call</fullName>
            </value>
            <value>
                <fullName>Confirmation - Update Data</fullName>
            </value>
            <value>
                <fullName>Confirmation - Claim</fullName>
            </value>
            <value>
                <fullName>Confirmation - Collection Task</fullName>
            </value>
            <value>
                <fullName>Conservation - Retain Redemption</fullName>
            </value>
            <value>
                <fullName>Conservation - Reinstate</fullName>
            </value>
            <value>
                <fullName>Conservation - Premium FU</fullName>
            </value>
            <value>
                <fullName>Conservation - NCB</fullName>
            </value>
            <value>
                <fullName>Survey Feedback</fullName>
            </value>
            <value>
                <fullName>Complaint Case</fullName>
            </value>
            <value>
                <fullName>Confirmation - SMS Pull Confirmation</fullName>
            </value>
            <value>
                <fullName>Confirmation - Complaint Follow Up</fullName>
            </value>
            <value>
                <fullName>Conservation - Renewal</fullName>
            </value>
            <value>
                <fullName>Survey Feedback - Survey - I Ask</fullName>
            </value>
            <value>
                <fullName>Survey Feedback - Survey - I Buy</fullName>
            </value>
            <value>
                <fullName>Survey Feedback - Survey - I Claim</fullName>
            </value>
            <value>
                <fullName>Collection - Withdrawal</fullName>
            </value>
            <value>
                <fullName>Collection - Renewal Reminder</fullName>
            </value>
            <value>
                <fullName>Collection - Lapse Konven</fullName>
            </value>
            <value>
                <fullName>Collection - MKP</fullName>
            </value>
            <value>
                <fullName>Collection - Cuti Premi</fullName>
            </value>
            <value>
                <fullName>Collection - RTU</fullName>
            </value>
            <value>
                <fullName>Collection - Redemption Konven</fullName>
            </value>
            <value>
                <fullName>Collection - Lapse TM</fullName>
            </value>
            <value>
                <fullName>Collection - Redemption TM</fullName>
            </value>
            <value>
                <fullName>Collection - Secondary Payment - Renewal Reminder</fullName>
            </value>
            <value>
                <fullName>Collection - TRO Project - Renewal Reminder</fullName>
            </value>
            <value>
                <fullName>Collection - TRO Project</fullName>
            </value>
            <value>
                <fullName>Collection - Others - Gagal Debet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>