force-app/main/default/objects/User_Detail__c/fields/Sisa_Waktu_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Sisa_Waktu_Follow_Up__c</fullName>
    <label>Sisa Waktu Follow Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>