force-app/main/default/objects/User_Detail__c/fields/Subject_Case__c.field-meta.xml
<CustomField>
    <fullName>Subject_Case__c</fullName>
    <inlineHelpText>Subject penanda Case from CCC</inlineHelpText>
    <label>Subject Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILCCANL</fullName>
            </value>
            <value>
                <fullName>ILCCDEK</fullName>
            </value>
            <value>
                <fullName>ILCCDEY</fullName>
            </value>
            <value>
                <fullName>ILCCDN</fullName>
            </value>
            <value>
                <fullName>ILCCEKN</fullName>
            </value>
            <value>
                <fullName>ILCCEPH</fullName>
            </value>
            <value>
                <fullName>ILCCHIK</fullName>
            </value>
            <value>
                <fullName>ILCCINL</fullName>
            </value>
            <value>
                <fullName>ILCCKAI</fullName>
            </value>
            <value>
                <fullName>ILCCKRO</fullName>
            </value>
            <value>
                <fullName>ILCCMAM</fullName>
            </value>
            <value>
                <fullName>ILCCROS</fullName>
            </value>
            <value>
                <fullName>ILCCSIS</fullName>
            </value>
            <value>
                <fullName>ILCCSRA</fullName>
            </value>
            <value>
                <fullName>ILCCTJ</fullName>
            </value>
            <value>
                <fullName>ILCCWHB</fullName>
            </value>
            <value>
                <fullName>ILCCWS</fullName>
            </value>
            <value>
                <fullName>ILCCYS</fullName>
            </value>
            <value>
                <fullName>ILCCYU</fullName>
            </value>
            <value>
                <fullName>ILCCIDI</fullName>
            </value>
            <value>
                <fullName>ILCCHAR</fullName>
            </value>
            <value>
                <fullName>ILCCDIAP</fullName>
            </value>
            <value>
                <fullName>ILCCYAY</fullName>
            </value>
            <value>
                <fullName>ILCCRAA</fullName>
            </value>
            <value>
                <fullName>ILCCADI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>