force-app/main/default/objects/User_Detail__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <inlineHelpText>for Workforce and KPI</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>WCT</fullName>
            </value>
            <value>
                <fullName>TCC</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Reinstate</fullName>
            </value>
            <value>
                <fullName>Premium FU</fullName>
            </value>
            <value>
                <fullName>DIGITAL TEAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>