force-app/main/default/objects/User_Detail__c/recordTypes/User_Detail.recordType-meta.xml
<RecordType>
    <fullName>User_Detail</fullName>
    <active>true</active>
    <label>User Detail</label>
</RecordType>