force-app/main/default/objects/User_Detail__c/recordTypes/User_Detail_CCC_AMFS.recordType-meta.xml
<RecordType>
    <fullName>User_Detail_CCC_AMFS</fullName>
    <active>true</active>
    <label>User Detail PBC CCC AMFS</label>
</RecordType>