force-app/main/default/objects/User_Detail__c/recordTypes/User_Detail_Collection_AMFS.recordType-meta.xml
<RecordType>
    <fullName>User_Detail_Collection_AMFS</fullName>
    <active>true</active>
    <label>User Detail Collection AMFS</label>
</RecordType>