force-app/main/default/objects/User_Detail__c/recordTypes/User_Detail_Qualtrics_AMFS.recordType-meta.xml
<RecordType>
    <fullName>User_Detail_Qualtrics_AMFS</fullName>
    <active>true</active>
    <label>User Detail Teleservice AMFS</label>
</RecordType>