force-app/main/default/objects/User_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>User__c</columns>
    <columns>Schedule__c</columns>
    <columns>Team__c</columns>
    <columns>Outbound_Activity_Case_type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>