force-app/main/default/objects/User_Detail__c/listViews/All_ALI.listView-meta.xml
<ListView>
    <fullName>All_ALI</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>User__c</columns>
    <columns>Schedule__c</columns>
    <columns>Team__c</columns>
    <columns>Outbound_Activity_Case_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>ALI</value>
    </filters>
    <label>All - ALI</label>
    <language>en_US</language>
</ListView>