force-app/main/default/objects/User_Detail__c/listViews/User_Detail_AMFS_Tele_Service.listView-meta.xml
<ListView>
    <fullName>User_Detail_AMFS_Tele_Service</fullName>
    <columns>NAME</columns>
    <columns>F_Entity__c</columns>
    <columns>Active__c</columns>
    <columns>Level__c</columns>
    <columns>Amount_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>User_Detail__c.User_Detail_Qualtrics_AMFS</value>
    </filters>
    <label>User Detail AMFS Tele Service</label>
</ListView>